--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,12 +16,12 @@ services:
         condition: any
     networks:
       - kong-fc
-    enviroment:
+    environment:
       - POSTGRES_USER=kong
       - POSTGRES_DB=kong
       - POSTGRES_PASSWORD=kong
     healthcheck:
-      test: ["CDM", "pg_isready", "-U", "kong"]
+      test: ["CMD", "pg_isready", "-U", "kong"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -78,7 +78,7 @@ services:
       - KONG_ADMIN_LISTEN=0.0.0.0:8001, 0.0.0.0:8444 ssl
       - KONG_PROXY_ADMIN_API_PORT=8001
       - KONG_PROXY_ADMIN_SSL_API_PORT=8444
-      - KONG_PLUGINS=bundled,oidc,kong-jwt2header,kong-upstream-jwt
+      - KONG_PLUGINS=bundled
     ports:
       - "80:8000"
       - "443:8443"
